# wikiserver

./: pyproject.toml
templates/: chat.html
wikiserver/: flask_app.py  sql.py
