[project]
name = "wikiserver"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rahul Dave", email = "rahuldave@gmail.com" }]
requires-python = ">= 3.11"
dependencies = ["wikiapp-rd @ https://test-files.pythonhosted.org/packages/53/fe/f16eed103d6a9814f38112a49d7fdc3b5a6fdb2d5df5d163720f11cdf737/wikiapp_rd-0.1.2-py3-none-any.whl"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wikiserver = { path = ".", editable = true }

[tool.pixi.tasks]
server = "python wikiserver/flask_app.py"
populate = "python wikiserver/sql.py"

[tool.pixi.dependencies]
flask = ">=3.0.3,<3.1"
sqlalchemy = ">=2.0.30,<2.1"
sqlite = ">=3.45.3,<3.46"
click = ">=8.1.7,<8.2"
requests = ">=2.32.3,<2.33"
pydantic = ">=2.7.3,<2.8"


[tool.setuptools]
packages = ["wikiserver"]

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/default"
